# wasm1

./: .copilotignore  .gitignore  .gitmodules  Cargo.toml  PLAN.md  README.md  wasm1.service
.agent/templates/: copilot-test.yaml  solo.yaml
docs/: ADD_FS.md  HOOKS.md  LOOP.md  MSGQ.md  SHELL.md  STEPWISE.md  TEAM.md  TEMPLATE.md  TEST.md  TEST2.md  TEST3.md  TEST4.md
guest/: Cargo.toml
guest/src/: lib.rs
src/: main.rs
