[package]
name = "ex1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = { version = "14.0", features = ["cranelift", "cache"] }
wasmtime-wasi = "14.0"
