[package]
name = "wasm1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
libc = "0.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
minijinja = "2"
wasmtime = { version = "14.0", features = ["cranelift", "cache"] }
wasmtime-wasi = "14.0"
tcow = { path = "vendor/tcow" }
